--- a/09 组件化开发/05 组件模板的分离写法/index.html
+++ b/09 组件化开发/05 组件模板的分离写法/index.html
@@ -8,40 +8,41 @@
 	<body>
 
 		<div id="app">
+			<cpn></cpn>
 			<cpn1></cpn1>
-			<cpn2></cpn2>
 		</div>
 
 	</body>
 	<script src="../../vue.js"></script>
+	<!-- 1.写法一 -->
+	<script type="text/x-template" id="cpn">
+		<div>
+			<h2>写法一</h2>
+			<p>这是段落</p>
+		</div>
+	</script>
+
+	<!-- 2.写法二 -->
+	<template id="cpn1">
+		<div>
+			<h2>写法二</h2>
+			<p>这是段落</p>
+		</div>
+	</template>
+
 	<script charset="utf-8">
-		// 1. 创建组件构造器对象
-//		const cpnC1 = Vue.extend()
 
 		//语法糖写法,全局组件
+		Vue.component('cpn',{
+			template: '#cpn'
+		})
 		Vue.component('cpn1',{
-			template: `
-			<div>
-				<h2>我是标题1</h2>
-				<p>我是段落1</p>
-				<p>我是段落2</p>
-			</div>
-			`
+			template: '#cpn1'
 		})
 
 		const app = new Vue({
 			el: '#app',
 			data: {
-			},
-			components: { //语法糖,局部组件
-				'cpn2': {
-					template: `
-						<div>
-							<h2>我是标题2</h2>
-							<p>我是段落1</p>
-						</div>
-				`
-				}
 			}
 		})
 	</script>
